Thu, Apr 10, 2025, 2:03 PM -04:00

--- a/tool/aframe-tinkering-1 copy.html
+++ b/tool/aframe-tinkering-1 copy.html
@@ -1,1 +1,24 @@
+<html>
+  <head>
+    <title>L08
+   </head>
 
+Image textures and materials</title>
+<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+
+  <body>
+    <a-scene>
+    <!-- Light-Blue Box -->
+    <a-box color="#FFFFFF"
+    src="L08-IMGs/metal-1024.jpg"
+    repeat="1 1"
+    normal-map=""
+    width="4" height="4" depth="4" position="-2 1.5 -9">
+          </a-box>
+          <!-- Brown Box -->
+    <a-box color="#795548"
+          width="4" height="4" depth="4" position="2 1.5 -9">
+        </a-box>
+      </a-scene>
+    </body>
+   </html>
