Fri, Apr 25, 2025, 8:43 AM -04:00

--- a/tool/aframe-tinkering-1 copy.html
+++ b/tool/aframe-tinkering-1 copy.html
@@ -10,7 +10,7 @@ Image textures and materials</title>
     <a-scene>
     <!-- Light-Blue Box -->
     <a-box color="#FFFFFF"
-    src="L08-IMGs/metal-1024.jpg"
+    src="wdsa"
     repeat="1 1"
     normal-map=""
     width="4" height="4" depth="4" position="-2 1.5 -9">
