--- a/index.html
+++ b/index.html
@@ -16,7 +16,130 @@
     </head>
     <body>s
         <!-- HTML -->
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wireless Communication Devices</title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Oregano&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">WirelessTech</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#current">Current Tech</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#future">Future Tech</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                            Categories
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#apps">Communication Apps</a></li>
+                            <li><a class="dropdown-item" href="#devices">Smart Devices</a></li>
+                            <li><a class="dropdown-item" href="#future">Future Concepts</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="hero">
+        <div class="container">
+            <h1>The Evolution of Wireless Communication</h1>
+            <p class="lead">Exploring current technologies and future innovations in wireless communication</p>
+        </div>
+    </header>
+
+    <!-- Current Technology Section -->
+    <section id="current" class="section">
+        <div class="container">
+            <h2>Current Technology</h2>
+
+            <!-- Communication Apps -->
+            <div id="apps">
+                <h3>Communication Apps</h3>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <!-- TextNow Card -->
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/textnow.jpg" class="card-img-top" alt="TextNow">
+                            <div class="card-body">
+                                <h5 class="card-title">TextNow</h5>
+                                <p class="card-text">
+                                    <ul>
+                                        <li>Send private messages</li>
+                                        <li>Make voice calls</li>
+                                        <li>Virtual phone number</li>
+                                        <li>Cross-platform compatibility</li>
+                                    </ul>
+                                </p>
+                                <a href="https://www.textnow.com/" class="btn btn-primary" target="_blank">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Similar cards for Google Voice and Telegram -->
+                    <!-- ... -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Future Technology Section -->
+    <section id="future" class="section">
+        <div class="container">
+            <h2>Future Technology</h2>
+
+            <!-- Carousel -->
+            <div id="futureDevices" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="future-device">
+                            <h3>MindLink Messaging</h3>
+                            <div class="model-placeholder">
+                                <!-- 3D model will go here -->
+                                <div class="placeholder-image"></div>
+                            </div>
+                            <p>Send messages directly from your thoughts without typing or speaking</p>
+                        </div>
+                    </div>
+                    <!-- Additional carousel items for Smart Translator and Holo Chat Projector -->
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#futureDevices" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#futureDevices" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- <script src="script.js"></script> -->
