Sun, May 4, 2025, 12:18 PM -04:00

--- a/index.html
+++ b/index.html
@@ -16,7 +16,114 @@
     </head>
     <body>
         <!-- HTML -->
- 
+        <body>
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+                <div class="container">
+                    <a class="navbar-brand" href="#">Wireless Evolution</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#future">Future Tech</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <!-- Hero Carousel -->
+            <div class="hero-section">
+                <div class="container">
+                    <div id="featuredCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="placeholder.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption">
+                                    <h3>Revolutionizing Communication</h3>
+                                </div>
+                            </div>
+                            <!-- Add more carousel items -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Current Technology Section -->
+            <section id="current" class="py-5">
+                <div class="container">
+                    <h2 class="text-center mb-5">Current Technologies</h2>
+                    <div class="row g-4">
+                        <!-- App Cards -->
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <div class="card-body">
+                                    <h5 class="card-title">TextNow</h5>
+                                    <ul>
+                                        <li>Free calls & texts</li>
+                                        <li>Virtual phone number</li>
+                                    </ul>
+                                    <a href="https://www.textnow.com/" class="btn btn-primary">Visit App</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Add more app cards -->
+
+                        <!-- Device Cards -->
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <div class="card-body">
+                                    <h5 class="card-title">Airfly</h5>
+                                    <ul>
+                                        <li>Wireless audio transmitter</li>
+                                        <li>Portable design</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Add more device cards -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- Future Technology Section -->
+            <section id="future" class="py-5 bg-light">
+                <div class="container">
+                    <h2 class="text-center mb-5">Future Innovations</h2>
+                    <div class="row g-4">
+                        <div class="col-md-4">
+                            <div class="card h-100 future-tech-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">MindLink Messaging</h5>
+                                    <p>Thought-to-text communication</p>
+                                    <img src="mindlink-messaging.png" class="img-fluid" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Add more future tech cards -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- Timeline Section -->
+            <section id="timeline" class="py-5">
+                <div class="container">
+                    <h2 class="text-center mb-5">Innovation Timeline</h2>
+                    <div class="timeline">
+                        <div class="timeline-item">
+                            <h5>2006 - Runaway Alarm Clock</h5>
+                            <p>Mobile alarm clock that forces you to wake up</p>
+                        </div>
+                        <!-- Add more timeline items -->
+                    </div>
+                </div>
+            </section>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+        </body>
+        </html>
 
 
     <!-- Bootstrap JS and dependencies -->
