--- a/index.html
+++ b/index.html
@@ -12,128 +12,177 @@
 
         </style>
 
-        <title>Title</title>
+        <title>Wireless Communication Tech</title>
     </head>
     <body>
-        <!-- HTML -->
-        <body>
-            <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-                <div class="container">
-                    <a class="navbar-brand" href="#">Wireless Evolution</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#future">Future Tech</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
-                        </ul>
+    <!-- HTML -->
+    <body>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">Wireless Tech</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Current Technologies -->
+        <section id="current" class="container py-5">
+            <h2 class="text-center mb-5">Current Technologies</h2>
+
+            <h3 class="mb-4">Communication Apps</h3>
+            <div class="row g-4">
+                <!-- TextNow Card -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="textnow.png" class="card-img-top" alt="TextNow">
+                        <div class="card-body">
+                            <h5 class="card-title">TextNow</h5>
+                            <ul class="list-unstyled">
+                                <li>📱 Private messaging</li>
+                                <li>📞 Voice calls</li>
+                                <li>💻 Cross-device use</li>
+                                <li>📸 Media sharing</li>
+                                <li>🔢 Virtual phone number</li>
+                            </ul>
+                            <a href="https://www.textnow.com/" class="btn btn-primary w-100">Visit TextNow</a>
+                        </div>
                     </div>
                 </div>
-            </nav>
 
-            <!-- Hero Carousel -->
-            <div class="hero-section">
-                <div class="container">
-                    <div id="featuredCarousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="placeholder.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption">
-                                    <h3>Revolutionizing Communication</h3>
-                                </div>
-                            </div>
-                            <!-- Add more carousel items -->
+                <!-- Google Voice Card -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="google-voice.png" class="card-img-top" alt="Google Voice">
+                        <div class="card-body">
+                            <h5 class="card-title">Google Voice</h5>
+                            <ul class="list-unstyled">
+                                <li>📨 Text & voice messages</li>
+                                <li>📞 Free calls</li>
+                                <li>📝 Voicemail transcription</li>
+                                <li>📲 Call forwarding</li>
+                                <li>🚫 Spam filtering</li>
+                            </ul>
+                            <a href="https://voice.google.com" class="btn btn-primary w-100">Visit Google Voice</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Telegram Card -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="telegram.png" class="card-img-top" alt="Telegram">
+                        <div class="card-body">
+                            <h5 class="card-title">Telegram</h5>
+                            <ul class="list-unstyled">
+                                <li>⚡ Instant messaging</li>
+                                <li>🔐 Secret chats</li>
+                                <li>📁 Large file sharing</li>
+                                <li>👥 Groups & channels</li>
+                                <li>🌐 Cross-platform</li>
+                            </ul>
+                            <a href="https://web.telegram.org" class="btn btn-primary w-100">Visit Telegram</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Current Technology Section -->
-            <section id="current" class="py-5">
-                <div class="container">
-                    <h2 class="text-center mb-5">Current Technologies</h2>
-                    <div class="row g-4">
-                        <!-- App Cards -->
-                        <div class="col-md-4">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h5 class="card-title">TextNow</h5>
-                                    <ul>
-                                        <li>Free calls & texts</li>
-                                        <li>Virtual phone number</li>
-                                    </ul>
-                                    <a href="https://www.textnow.com/" class="btn btn-primary">Visit App</a>
-                                </div>
-                            </div>
+            <h3 class="mt-5 mb-4">Innovative Devices</h3>
+            <div class="row g-4">
+                <!-- Airfly Card -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="airfly-wireless-transmitter.png" class="card-img-top" alt="Airfly">
+                        <div class="card-body">
+                            <h5 class="card-title">Airfly Transmitter</h5>
+                            <ul class="list-unstyled">
+                                <li>🎧 Wireless headphones adapter</li>
+                                <li>🔋 Use while charging</li>
+                                <li>✈️ Travel-friendly</li>
+                                <li>⏳ Long battery life</li>
+                                <li>📶 No wires needed</li>
+                            </ul>
                         </div>
-                        <!-- Add more app cards -->
-
-                        <!-- Device Cards -->
-                        <div class="col-md-4">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h5 class="card-title">Airfly</h5>
-                                    <ul>
-                                        <li>Wireless audio transmitter</li>
-                                        <li>Portable design</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Add more device cards -->
                     </div>
                 </div>
-            </section>
 
-            <!-- Future Technology Section -->
-            <section id="future" class="py-5 bg-light">
-                <div class="container">
-                    <h2 class="text-center mb-5">Future Innovations</h2>
-                    <div class="row g-4">
-                        <div class="col-md-4">
-                            <div class="card h-100 future-tech-card">
-                                <div class="card-body">
-                                    <h5 class="card-title">MindLink Messaging</h5>
-                                    <p>Thought-to-text communication</p>
-                                    <img src="mindlink-messaging.png" class="img-fluid" alt="...">
-                                </div>
-                            </div>
+                <!-- Rocketbook Card -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="rocketbook-core.png" class="card-img-top" alt="Rocketbook">
+                        <div class="card-body">
+                            <h5 class="card-title">Rocketbook Notebook</h5>
+                            <ul class="list-unstyled">
+                                <li>🌱 Eco-friendly</li>
+                                <li>💾 Cloud saving</li>
+                                <li>🧼 Easy cleaning</li>
+                                <li>📘 16 reusable pages</li>
+                                <li>🎨 Multiple colors/sizes</li>
+                            </ul>
                         </div>
-                        <!-- Add more future tech cards -->
                     </div>
                 </div>
-            </section>
 
-            <!-- Timeline Section -->
-            <section id="timeline" class="py-5">
-                <div class="container">
-                    <h2 class="text-center mb-5">Innovation Timeline</h2>
-                    <div class="timeline">
-                        <div class="timeline-item">
-                            <h5>2006 - Runaway Alarm Clock</h5>
-                            <p>Mobile alarm clock that forces you to wake up</p>
+                <!-- Runaway Alarm Card -->
+                <div class="col-md-4">
+                    <div class="card h-100">
+                        <img src="runaway-alarm-clock.png" class="card-img-top" alt="Runaway Alarm">
+                        <div class="card-body">
+                            <h5 class="card-title">Runaway Alarm Clock</h5>
+                            <ul class="list-unstyled">
+                                <li>🏃♂️ Mobile alarm</li>
+                                <li>🎶 Plays music</li>
+                                <li>⏰ For heavy sleepers</li>
+                                <li>👶 Kid-friendly</li>
+                                <li>✅ Easy setup</li>
+                            </ul>
                         </div>
-                        <!-- Add more timeline items -->
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        </body>
-        </html>
-
-
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+        <!-- Innovation Timeline -->
+        <section id="timeline" class="container py-5">
+            <h2 class="text-center mb-5">Innovation Timeline</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h4>2006 - Runaway Alarm Clock</h4>
+                    <p>Mobile alarm clock that moves around to ensure you wake up</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>2009 - Google Voice</h4>
+                    <p>Internet-based phone service with voicemail transcription</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>2009 - TextNow</h4>
+                    <p>Free calling and texting app using WiFi connection</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>2013 - Telegram</h4>
+                    <p>Secure cloud-based messaging service</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>2014 - Rocketbook Core</h4>
+                    <p>Reusable smart notebook with digital saving</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>2018 - Airfly Transmitter</h4>
+                    <p>Wireless audio adapter for non-Bluetooth devices</p>
+                </div>
+            </div>
+        </section>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- <script src="script.js"></script> -->
-        <script>
+    </body>
+    </html>
             // JS
 
 
