--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Oregano&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
-            
+
     <style>
         :root {
             --primary: #2B4570;
@@ -108,7 +108,7 @@
                 <!-- TextNow Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="textnow.png" class="card-img-top" alt="TextNow">
+                        <img src="../prep/textnow.png" class="card-img-top" alt="TextNow">
                         <div class="card-body">
                             <h5 class="card-title">TextNow</h5>
                             <ul class="list-unstyled">
