Sun, May 4, 2025, 12:52 PM -04:00

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <!-- Google Voice Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="google-voice.png" class="card-img-top" alt="Google Voice">
+                        <img src="../prep/google-voice.png" class="card-img-top" alt="Google Voice">
                         <div class="card-body">
                             <h5 class="card-title">Google Voice</h5>
                             <ul class="list-unstyled">
