Sun, May 4, 2025, 1:05 PM -04:00

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <!-- Telegram Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="telegram.png" class="card-img-top" alt="Telegram">
+                        <img src="../prep/telegram.png" class="card-img-top" alt="Telegram">
                         <div class="card-body">
                             <h5 class="card-title">Telegram</h5>
                             <ul class="list-unstyled">
