--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <!-- Rocketbook Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="rocketbook-core.png" class="card-img-top" alt="Rocketbook">
+                        <img src="../prep/rocketbook-core(2).png" class="card-img-top" alt="Rocketbook">
                         <div class="card-body">
                             <h5 class="card-title">Rocketbook Notebook</h5>
                             <ul class="list-unstyled">
