Sun, May 4, 2025, 1:10 PM -04:00

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <!-- Airfly Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="airfly-wireless-transmitter.png" class="card-img-top" alt="Airfly">
+                        <img src="../prep/airfly.png" class="card-img-top" alt="Airfly">
                         <div class="card-body">
                             <h5 class="card-title">Airfly Transmitter</h5>
                             <ul class="list-unstyled">
@@ -182,7 +182,7 @@
                 <!-- Rocketbook Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/rocketbook-core(2).png" class="card-img-top" alt="Rocketbook">
+                        <img src="../prep/rocketbook-core (2).png" class="card-img-top" alt="Rocketbook">
                         <div class="card-body">
                             <h5 class="card-title">Rocketbook Notebook</h5>
                             <ul class="list-unstyled">
