Sun, May 4, 2025, 1:14 PM -04:00

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <!-- Airfly Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/airfly(2).png" class="card-img-top" alt="Airfly">
+                        <img src="../prep/Screenshot 2025-05-04 131253.png" class="card-img-top" alt="Airfly">
                         <div class="card-body">
                             <h5 class="card-title">Airfly Transmitter</h5>
                             <ul class="list-unstyled">
