--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <!-- Runaway Alarm Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="runaway-alarm-clock.png" class="card-img-top" alt="Runaway Alarm">
+                        <img src="../prep/runaway-alarm.webp" class="card-img-top" alt="Runaway Alarm">
                         <div class="card-body">
                             <h5 class="card-title">Runaway Alarm Clock</h5>
                             <ul class="list-unstyled">
