--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -1,1 +1,111 @@
+<html>
+  <head>
+    <title>Invention Showcase</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <a-scene background="color: #000">
+      <!-- Ground -->
+      <a-plane rotation="-90 0 0" width="100" height="100" color="#111"></a-plane>
+
+      <!-- MindLink Messaging -->
+      <a-entity position="-10 0 0">
+        <!-- Ground -->
+        <a-plane rotation="-90 0 0" width="50" height="50" color="#111"></a-plane>
+
+        <a-entity position="0 1.5 -3">
+          <a-torus color="#2e86de" radius="0.5" radius-tubular="0.03" rotation="0 0 90"></a-torus>
+          <a-sphere position="0.5 0.1 0" radius="0.05" color="#74b9ff"></a-sphere>
+          <a-sphere position="-0.5 0.1 0" radius="0.05" color="#74b9ff"></a-sphere>
+          <a-sphere position="0 0.1 0.5" radius="0.05" color="#74b9ff"></a-sphere>
+          <a-sphere position="0 0.1 -0.5" radius="0.05" color="#74b9ff"></a-sphere>
+          <a-box position="0 0.3 0" depth="0.2" height="0.2" width="0.3" color="#192a56"></a-box>
+          <a-box position="0 0.4 0" depth="0.15" height="0.15" width="0.25" color="#273c75"></a-box>
+          <a-entity>
+            <a-cylinder position="0 0.5 0" height="1" radius="0.02" color="#4cd137"
+              animation="property: position; to: 0 2 0; dir: alternate; loop: true; dur: 1000"></a-cylinder>
+            <a-cylinder position="0.2 0.4 0.2" height="1.2" radius="0.02" color="#4cd137"
+              animation="property: position; to: 0.2 1.8 0.2; dir: alternate; loop: true; dur: 1200"></a-cylinder>
+            <a-cylinder position="-0.2 0.6 -0.2" height="0.8" radius="0.02" color="#4cd137"
+              animation="property: position; to: -0.2 1.6 -0.2; dir: alternate; loop: true; dur: 900"></a-cylinder>
+          </a-entity>
+          <a-sphere position="0 2 0" radius="0.3" color="#f8c291" opacity="0.9"
+            animation="property: position; to: 0 2.5 0; dir: alternate; loop: true; dur: 1500"></a-sphere>
+          <a-entity geometry="primitive: plane; width: 1; height: 0.5" material="color: #f6e58d; side: double"
+            text="value: Your Thought Here; align: center; color: #000" position="0 2.8 0"></a-entity>
+        </a-entity>
+        <a-box color="#16a085" position="0 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
+        <a-sphere color="#27ae60" position="0 1.7 -3" radius="0.2"></a-sphere>
+      </a-entity>
+
+      <!-- Smart Translator -->
+      <a-entity position="0 0 0">
+        <a-plane rotation="-90 0 0" width="50" height="50" color="#111"></a-plane>
+        <a-entity position="0 1 -3">
+          <a-box color="#2ecc71" depth="0.5" height="0.8" width="0.3" position="0 0.4 0" roughness="0.8"></a-box>
+          <a-box color="#34495e" depth="0.05" height="0.2" width="0.25" position="0 0.65 0.26"></a-box>
+          <a-cylinder color="#d35400" radius="0.03" height="0.2" position="0 0.95 0.26"></a-cylinder>
+          <a-plane position="0 0.3 0.26" width="0.2" height="0.3" color="#2980b9" material="opacity: 0.8"></a-plane>
+          <a-entity geometry="primitive: plane; width: 0.18; height: 0.28" material="color: #1abc9c; side: double"
+            text="value: Hello (EN) -> Hola (ES); align: center; color: #fff; wrapCount: 20" position="0 0.3 0.27"></a-entity>
+          <a-box position="-0.1 0.05 0.26" depth="0.05" height="0.05" width="0.05" color="#e74c3c"></a-box>
+          <a-box position="0 0.05 0.26" depth="0.05" height="0.05" width="0.05" color="#f39c12"></a-box>
+          <a-box position="0.1 0.05 0.26" depth="0.05" height="0.05" width="0.05" color="#3498db"></a-box>
+        </a-entity>
+        <a-entity>
+          <a-ring position="-0.5 1 -3" radius-inner="0.05" radius-outer="0.1" color="#f1c40f"
+            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; dur: 1000"></a-ring>
+          <a-ring position="-0.5 1 -3" radius-inner="0.15" radius-outer="0.2" color="#f39c12"
+            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; delay: 200; dur: 1000"></a-ring>
+          <a-ring position="0.5 1 -3" radius-inner="0.05" radius-outer="0.1" color="#27ae60"
+            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; dur: 1000"></a-ring>
+          <a-ring position="0.5 1 -3" radius-inner="0.15" radius-outer="0.2" color="#2ecc71"
+            animation="property: scale; to: 2 2 2; dir: alternate; loop: true; delay: 200; dur: 1000"></a-ring>
+        </a-entity>
+        <a-box color="#e67e22" position="-0.5 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
+        <a-sphere color="#f39c12" position="-0.5 1.7 -3" radius="0.2"></a-sphere>
+        <a-box color="#2980b9" position="0.5 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
+        <a-sphere color="#3498db" position="0.5 1.7 -3" radius="0.2"></a-sphere>
+      </a-entity>
+
+      <!-- Holo Chat Projector -->
+      <a-entity position="10 0 0">
+        <a-plane rotation="-90 0 0" width="50" height="50" color="#333"></a-plane>
+        <a-entity position="0 0 -3">
+          <!-- Additional Green Rings at the Back -->
+<a-ring
+  position="0 1 -0.5"
+  radius-inner="0.6"
+  radius-outer="0.7"
+  color="#00ff00"
+  animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1200"
+></a-ring>
+<a-ring
+  position="0 1 -0.5"
+  radius-inner="0.8"
+  radius-outer="0.9"
+  color="#00cc00"
+  animation="property: scale; to: 1.3 1.3 1.3; dir: alternate; loop: true; delay: 200; dur: 1200"
+></a-ring>
+
+          <a-cylinder position="0 0.1 0" radius="0.5" height="0.2" color="#2c3e50"></a-cylinder>
+          <a-torus position="0 0.2 0" radius="0.5" radius-tubular="0.05" color="#34495e"></a-torus>
+          <a-cylinder position="0 0.3 0" radius="0.3" height="0.4" color="#1abc9c"></a-cylinder>
+          <a-sphere position="0 0.5 0" radius="0.1" color="#f9ca24" emissive="#f9ca24"></a-sphere>
+          <a-cone position="0 1.5 0" radius-bottom="0.3" radius-top="0.05" height="2" color="#00d2d3" opacity="0.2"></a-cone>
+          <a-entity position="0 1.8 0">
+            <a-box color="#3498db" position="0 0.8 0" depth="0.2" width="0.5" height="1.2" opacity="0.7"></a-box>
+            <a-sphere color="#9b59b6" position="0 1.6 0" radius="0.25" opacity="0.7"></a-sphere>
+          </a-entity>
+        </a-entity>
+      </a-entity>
+    </a-scene>
+  </body>
+</html>
 
