--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
             </div>
         </section>
 
-        <iframe
+        <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px">
+        </iframe>
 
     </body>
     </html>
