Mon, May 5, 2025, 2:57 PM -04:00

--- a/index.html
+++ b/index.html
@@ -245,8 +245,10 @@
             </div>
         </section>
 
-        <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px">
-        </iframe>
+        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+            <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
+          </div>
+
 
     </body>
     </html>
