--- a/index.html
+++ b/index.html
@@ -245,9 +245,13 @@
             </div>
         </section>
 
+        <!-- Aframe models -->
+
         <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
             <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
-          </div>
+        </div>
+
+
 
 
     </body>
