--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -43,6 +43,7 @@
         <a-box color="#16a085" position="0 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
         <a-sphere color="#27ae60" position="0 1.7 -3" radius="0.2"></a-sphere>
       </a-entity>
+      <a-image src="
 
       <!-- Smart Translator -->
       <a-entity position="0 0 0">
