Mon, May 5, 2025, 3:08 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -43,9 +43,14 @@
         <a-box color="#16a085" position="0 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
         <a-sphere color="#27ae60" position="0 1.7 -3" radius="0.2"></a-sphere>
       </a-entity>
-      <a-image src="mindlink-messaging(1).png"
-                position="0 0 0"
-      </a-image>
+
+      <a-image src="../prep/mindlink-messaging(1).png"
+                position="-12 1.5 -3"
+                width="1.024"
+                height="0.768"
+                rotation="0 0 0>
+              </a-image>
+
 
       <!-- Smart Translator -->
       <a-entity position="0 0 0">
