Mon, May 5, 2025, 3:09 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -46,8 +46,9 @@
 
       <a-image src="../prep/mindlink-messaging(1).png"
                 position="-12 1.5 -3"
-                width="1.024"
-                height="0.768"
+                width="1"
+                height="1"
+                scale="1 1 1"
                 rotation="0 0 0>
               </a-image>
 
