--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -48,8 +48,8 @@
                 position="-12 1.5 -3"
                 width="1"
                 height="1"
-                scale="1 1 1"
-                rotation="0 0 0>
+                scale="2 3 1">
+
               </a-image>
 
 
@@ -82,6 +82,14 @@
         <a-box color="#2980b9" position="0.5 0.5 -3" depth="0.3" width="0.3" height="1.5"></a-box>
         <a-sphere color="#3498db" position="0.5 1.7 -3" radius="0.2"></a-sphere>
       </a-entity>
+
+      <a-image src="../prep/holo-chat-projector.png"
+      position="-2 1.5 -3"
+      width="1"
+      height="1"
+      scale="2 3 1">
+
+    </a-image>
 
       <!-- Holo Chat Projector -->
       <a-entity position="10 0 0">
