--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -83,7 +83,7 @@
         <a-sphere color="#3498db" position="0.5 1.7 -3" radius="0.2"></a-sphere>
       </a-entity>
 
-      <a-image src="../prep/holo-chat-projector.png"
+      <a-image src="../prep/smart-translator.png"
       position="-2 1.5 -3"
       width="1"
       height="1"
@@ -95,21 +95,23 @@
       <a-entity position="10 0 0">
         <a-plane rotation="-90 0 0" width="50" height="50" color="#333"></a-plane>
         <a-entity position="0 0 -3">
-          <!-- Additional Green Rings at the Back -->
-<a-ring
-  position="0 1 -0.5"
-  radius-inner="0.6"
-  radius-outer="0.7"
-  color="#00ff00"
-  animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1200"
-></a-ring>
-<a-ring
-  position="0 1 -0.5"
-  radius-inner="0.8"
-  radius-outer="0.9"
-  color="#00cc00"
-  animation="property: scale; to: 1.3 1.3 1.3; dir: alternate; loop: true; delay: 200; dur: 1200"
-></a-ring>
+
+
+          <!-- Green Rings at the Back -->
+        <a-ring
+          position="0 1 -0.5"
+          radius-inner="0.6"
+          radius-outer="0.7"
+          color="#00ff00"
+          animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true; dur: 1200"
+        ></a-ring>
+        <a-ring
+          position="0 1 -0.5"
+          radius-inner="0.8"
+          radius-outer="0.9"
+          color="#00cc00"
+          animation="property: scale; to: 1.3 1.3 1.3; dir: alternate; loop: true; delay: 200; dur: 1200"
+        ></a-ring>
 
           <a-cylinder position="0 0.1 0" radius="0.5" height="0.2" color="#2c3e50"></a-cylinder>
           <a-torus position="0 0.2 0" radius="0.5" radius-tubular="0.05" color="#34495e"></a-torus>
@@ -120,6 +122,13 @@
             <a-box color="#3498db" position="0 0.8 0" depth="0.2" width="0.5" height="1.2" opacity="0.7"></a-box>
             <a-sphere color="#9b59b6" position="0 1.6 0" radius="0.25" opacity="0.7"></a-sphere>
           </a-entity>
+
+          <a-image src="../prep/holo-chat-projector.png"
+          position="-2.5 1.5 0"
+          width="1"
+          height="1"
+          scale="2 3 1">
+
         </a-entity>
       </a-entity>
     </a-scene>
