--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -83,8 +83,10 @@
         <a-sphere color="#3498db" position="0.5 1.7 -3" radius="0.2"></a-sphere>
       </a-entity>
 
+      <a-cylinder position="-2 0.5 -3" radius="0.4" height="1.2" color="#808080"></a-cylinder>
+
       <a-image src="../prep/smart-translator.png"
-      position="-2 1.5 -3"
+      position="-2 2.6 -3"
       width="1"
       height="1"
       scale="2 3 1">
