--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -124,6 +124,8 @@
             <a-sphere color="#9b59b6" position="0 1.6 0" radius="0.25" opacity="0.7"></a-sphere>
           </a-entity>
 
+          <a-cylinder position="-2.5 1.5 0" radius="0.4" height="1.2" color="#808080"></a-cylinder>
+
           <a-image src="../prep/holo-chat-projector.png"
           position="-2.5 1.5 0"
           width="1"
