Mon, May 5, 2025, 3:35 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -44,11 +44,13 @@
         <a-sphere color="#27ae60" position="0 1.7 -3" radius="0.2"></a-sphere>
       </a-entity>
 
+      <a-cylinder position="-12 0.5 -3" radius="0.4" height="1.2" color="#808080"></a-cylinder>
+
       <a-image src="../prep/mindlink-messaging(1).png"
-                position="-12 1.5 -3"
-                width="1"
-                height="1"
-                scale="2 3 1">
+              position="-12 1.6 -3"
+              width="1"
+              height="1"
+              scale="1 1 1">
 
               </a-image>
 
@@ -127,7 +129,7 @@
           <a-cylinder position="-2.5 0.5 0" radius="0.4" height="1.2" color="#808080"></a-cylinder>
 
           <a-image src="../prep/holo-chat-projector.png"
-          position="-2 1.6 -3"
+          position="-2.5 1.6 0"
           width="1"
           height="1"
           scale="1 1 1">
