--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -51,8 +51,9 @@
               width="1"
               height="1"
               scale="1 1 1">
-
               </a-image>
+
+      <a-box color="
 
 
       <!-- Smart Translator -->
