Mon, May 5, 2025, 3:38 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -53,7 +53,8 @@
               scale="1 1 1">
               </a-image>
 
-      <a-box color="
+      <a-box color="#000435"
+              position="
 
 
       <!-- Smart Translator -->
