Mon, May 5, 2025, 3:41 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -54,7 +54,11 @@
               </a-image>
 
       <a-box color="#000435"
-              position="
+              position="-10 0 -2.5"
+              width="1"
+              depth="0.1"
+              height="0.5">
+            </a-box>
 
 
       <!-- Smart Translator -->
