--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -54,11 +54,12 @@
               </a-image>
 
       <a-box color="#000435"
-              position="-10 0 -2.5"
+              position="-4.5 0 -2.5"
               width="1"
               depth="0.1"
-              height="0.5">
-            </a-box>
+              height="0.5"
+              scale="3 3 1">
+              </a-box>
 
 
       <!-- Smart Translator -->
