--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -51,15 +51,23 @@
               width="1"
               height="1"
               scale="1 1 1">
-              </a-image>
+       </a-image>
 
       <a-box color="#000435"
-              position="-4.5 0 -2.5"
-              width="1"
+              position="-8 0 -3"
+              width="0.7"
               depth="0.1"
-              height="0.5"
+              height="1.2"
               scale="3 3 1">
-              </a-box>
+      </a-box>
+
+      <a-text value="Send messages from your thoughts without typing or speaking.
+      This headset reads your thoughts and turns them into text or speech. You can send messages without moving or talking. It’s very helpful for people who can’t type or speak easily.
+      Works instantly to share ideas with others.
+      As soon as you think of something, the device sends your message right away. It’s fast and perfect for sharing ideas quickly.
+      Keep your private thoughts safe with controls.
+      You can choose which thoughts to share and which to keep private. The device has strong protections to make sure no one else can see your private ideas.
+
 
 
       <!-- Smart Translator -->
