Mon, May 5, 2025, 4:03 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -57,16 +57,27 @@
               position="-8 0 -3"
               width="0.7"
               depth="0.1"
-              height="1.2"
+              height="1.4"
               scale="3 3 1">
       </a-box>
 
-      <a-text value="Send messages from your thoughts without typing or speaking.
-      This headset reads your thoughts and turns them into text or speech. You can send messages without moving or talking. It’s very helpful for people who can’t type or speak easily.
-      Works instantly to share ideas with others.
-      As soon as you think of something, the device sends your message right away. It’s fast and perfect for sharing ideas quickly.
-      Keep your private thoughts safe with controls.
-      You can choose which thoughts to share and which to keep private. The device has strong protections to make sure no one else can see your private ideas.
+      <a-text value="1. Send messages from your thoughts without typing or speaking.
+
+        This headset reads your thoughts and turns them into text or speech. You can send messages without moving or talking. It’s very helpful for people who can’t type or speak easily.
+
+      2. Works instantly to share ideas with others.
+
+        As soon as you think of something, the device sends your message right away. It’s fast and perfect for sharing ideas quickly.
+
+      3. Keep your private thoughts safe with controls.
+
+        You can choose which thoughts to share and which to keep private. The device has strong protections to make sure no one else can see your private ideas."
+
+              position="-9 1 -2.9"
+              width="2">
+
+      </a-text>
+
 
 
 
@@ -108,6 +119,34 @@
       height="1"
       scale="1 1 1">
     </a-image>
+
+    <a-box color="#000435"
+        position="-8 0 -3"
+        width="0.7"
+        depth="0.1"
+        height="1.4"
+        scale="3 3 1">
+    </a-box>
+
+    <a-text value="1. Change any language into your language in real-time.
+
+        1. This device listens to words in one language and changes them into another language right away. It helps you talk to people who speak a different language.
+
+          Works for talking, texting, and even sign language.
+
+        2. You can use it to talk in person, on calls, or in text messages.
+
+          It can also read and translate sign language, so everyone can communicate.
+
+        3. Lets you hear translations in a voice like the speaker’s.
+
+          When it translates, the device uses a voice that sounds like the person talking. This keeps the conversation natural and easy to understand."
+
+
+        position="2 1 0"
+        width="2">
+
+      </a-text>
 
       <!-- Holo Chat Projector -->
       <a-entity position="10 0 0">
