Mon, May 5, 2025, 4:04 PM -04:00

--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -121,7 +121,7 @@
     </a-image>
 
     <a-box color="#000435"
-        position="-8 0 -3"
+        position="2 1 -3"
         width="0.7"
         depth="0.1"
         height="1.4"
@@ -130,13 +130,11 @@
 
     <a-text value="1. Change any language into your language in real-time.
 
-        1. This device listens to words in one language and changes them into another language right away. It helps you talk to people who speak a different language.
+          This device listens to words in one language and changes them into another language right away. It helps you talk to people who speak a different language.
 
-          Works for talking, texting, and even sign language.
+          2. Works for talking, texting, and even sign language.
 
-        2. You can use it to talk in person, on calls, or in text messages.
-
-          It can also read and translate sign language, so everyone can communicate.
+          You can use it to talk in person, on calls, or in text messages. It can also read and translate sign language, so everyone can communicate.
 
         3. Lets you hear translations in a voice like the speaker’s.
 
