--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -124,7 +124,7 @@
         position="2 1 -3"
         width="0.7"
         depth="0.1"
-        height="1.4"
+        height="0.7"
         scale="3 3 1">
     </a-box>
 
@@ -141,7 +141,7 @@
           When it translates, the device uses a voice that sounds like the person talking. This keeps the conversation natural and easy to understand."
 
 
-        position="2 1 0"
+        position="1 1 -2.9"
         width="2">
 
       </a-text>
@@ -185,6 +185,31 @@
           width="1"
           height="1"
           scale="1 1 1">
+
+          <a-box color="#000435"
+          position="2 1 -3"
+          width="0.7"
+          depth="0.1"
+          height="0.7"
+          scale="3 3 1">
+          </a-box>
+
+          <a-text value="1. Shows 3D holograms of people during calls.
+
+            This small device makes a 3D image of the person you’re talking to. It looks like they are standing in front of you, making calls feel real.
+
+          2. Small and easy to carry anywhere.
+
+            The projector is small and light, so you can take it with you anywhere. It fits in a bag or pocket and works for hours without needing to be plugged in.
+
+          3. Lets you use hand gestures and share 3D objects.
+
+            You can wave your hands to control the hologram or move things around. It’s great for showing 3D models or working together on projects."
+
+
+
+          position="1 1 -2.9"
+          width="2">
 
         </a-entity>
       </a-entity>
