--- a/tool/aframe-inventions.html
+++ b/tool/aframe-inventions.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <a-scene background="color: #000">
+      <a-plane rotation="-90 0 0" width="50" height="25" color="#111" shadow></a-plane>
 
       <!-- MindLink Messaging -->
       <a-entity position="-10 0 0">
@@ -144,7 +145,7 @@
 
       <!-- Holo Chat Projector -->
       <a-entity position="10 0 0">
-        
+
         <a-entity position="0 0 -3">
 
 
