--- a/index.html
+++ b/index.html
@@ -247,9 +247,10 @@
 
         <!-- Aframe models -->
 
-        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; border: 5px solid #A5D8FF;">
             <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
         </div>
+
 
 
 
