Mon, May 5, 2025, 4:22 PM -04:00

--- a/index.html
+++ b/index.html
@@ -247,17 +247,16 @@
 
         <!-- Aframe models -->
 
-        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; border: 5px solid #A5D8FF;">
+        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
             <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
         </div>
 
 
 
 
-
     </body>
     </html>
-            // JS
+           
 
 
         </script>
