Mon, May 5, 2025, 4:32 PM -04:00

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 
     <style>
+
+        .future-title {
+            font-family: 'Oregano', cursive;
+            color: var(--secondary);
+        }
+
+
         :root {
             --primary: #2B4570;
             --secondary: #A5D8FF;
@@ -247,11 +254,12 @@
 
         <!-- Aframe models -->
 
-        
-
-        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-            <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
-        </div>
+        <section class="container py-5">
+            <h3 class="future-title text-center mb-4">Future Innovations</h3>
+            <div class="aframe-container">
+                <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
+            </div>
+        </section>
 
 
 
