Mon, May 5, 2025, 4:37 PM -04:00

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#future">Future Innovations</a></li>
                         <li class="nav-item"><a class="nav-link" href="#current">Current Tech</a></li>
                         <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
                     </ul>
@@ -247,7 +248,7 @@
 
         <!-- Aframe models -->
 
-        <section class="container py-5">
+        <section id="future" class="container py-5">
             <h2 class="future-title text-center mb-4">Future Innovations</h2>
             <div class="aframe-container">
                 <iframe src="../tool/aframe-inventions.html" width="1280px" height="720px"></iframe>
