--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container">
-                <a class="navbar-brand" href="#">Wireless Tech</a>
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="../prep/logo.png" alt="Logo" width="40" height="40" class="me-2">
+                    Wireless Tech
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
