--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 
     <style>
+
+        .navbar-brand {
+            color: black !important;
+        }
+
         :root {
             --primary: #2B4570;
             --secondary: #A5D8FF;
