Tue, May 6, 2025, 1:48 PM -04:00

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <!-- TextNow Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/textnow.png" class="card-img-top" alt="TextNow">
+                        <img src="prep/textnow.png" class="card-img-top" alt="TextNow">
                         <div class="card-body">
                             <h5 class="card-title">TextNow</h5>
                             <ul class="list-unstyled">
@@ -134,7 +134,7 @@
                 <!-- Google Voice Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/google-voice.png" class="card-img-top" alt="Google Voice">
+                        <img src="prep/google-voice.png" class="card-img-top" alt="Google Voice">
                         <div class="card-body">
                             <h5 class="card-title">Google Voice</h5>
                             <ul class="list-unstyled">
@@ -152,7 +152,7 @@
                 <!-- Telegram Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/telegram.png" class="card-img-top" alt="Telegram">
+                        <img src="prep/telegram.png" class="card-img-top" alt="Telegram">
                         <div class="card-body">
                             <h5 class="card-title">Telegram</h5>
                             <ul class="list-unstyled">
@@ -173,7 +173,7 @@
                 <!-- Airfly Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <img src="../prep/Screenshot 2025-05-04 131253.png" class="card-img-top" alt="Airfly">
+                        <img src="prep/Screenshot 2025-05-04 131253.png" class="card-img-top" alt="Airfly">
                         <div class="card-body">
                             <h5 class="card-title">Airfly Transmitter</h5>
                             <ul class="list-unstyled">
